--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,9 @@ task wrapper(type: Wrapper) {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.yauhenl.pibot.TestGpio'
+    }
+}
