--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
+plugins {
+    id 'java'
+    id "org.hidetake.ssh" version "2.4.0"
+}
+
 group 'com.yauhenl'
 version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
@@ -9,16 +12,34 @@ repositories {
     mavenCentral()
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.14'
+remotes {
+    pi {
+        host = '192.168.1.7'
+        user = 'pi'
+        password = 'raspberry'
+    }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'com.pi4j:pi4j-core:1.0'
 }
 
 jar {
     manifest {
         attributes 'Main-Class': 'com.yauhenl.pibot.TestGpio'
+    }
+    archiveName 'pibot.jar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.14'
+}
+
+task deploy << {
+    ssh.run {
+        session(remotes.pi) {
+            put from: 'build/libs/pibot.jar', into: 'pibot.jar'
+        }
     }
 }
