--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,23 @@
-plugins {
-    id 'java'
-    id "org.hidetake.ssh" version "2.4.0"
+allprojects {
+    group = 'com.yauhenl'
+    version = '1.0'
 }
 
-group 'com.yauhenl'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-remotes {
-    pi {
-        host = '192.168.1.7'
-        user = 'pi'
-        password = 'raspberry'
+subprojects {
+    buildscript {
+        repositories {
+            mavenCentral()
+            maven {
+                url "https://plugins.gradle.org/m2/"
+            }
+        }
+    }
+    repositories {
+        mavenCentral()
     }
 }
 
-dependencies {
-    compile 'com.pi4j:pi4j-core:1.0'
-}
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.yauhenl.pibot.TestGpio'
-    }
-    archiveName 'pibot.jar'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-}
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.14'
-}
-
-task deploy << {
-    ssh.run {
-        session(remotes.pi) {
-            put from: 'build/libs/pibot.jar', into: 'pibot.jar'
-        }
-    }
 }
