--- a/client/build.gradle
+++ b/client/build.gradle
@@ -11,4 +11,5 @@ sourceCompatibility = 1.8
 
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-freemarker:1.3.6.RELEASE'
 }
