--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ subprojects {
             }
         }
     }
+
+    apply plugin: 'java'
+    sourceCompatibility = 1.8
+
     repositories {
         mavenCentral()
     }
