--- a/client/build.gradle
+++ b/client/build.gradle
@@ -4,12 +4,10 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
 apply plugin: 'spring-boot'
-
-sourceCompatibility = 1.8
 
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-freemarker:1.3.6.RELEASE'
+    compile project(':utils')
 }
