--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,6 @@ allprojects {
 
 subprojects {
     buildscript {
-        ext {
-            springBootVersion = '1.3.6.RELEASE'
-            kotlinVersion = '1.0.3'
-            sshPluginVersion = '2.4.0'
-        }
         repositories {
             mavenCentral()
             maven {
@@ -17,6 +12,9 @@ subprojects {
             }
         }
     }
+
+    apply plugin: 'java'
+    sourceCompatibility = 1.8
 
     repositories {
         mavenCentral()
