--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE"
-        classpath "org.hidetake:gradle-ssh-plugin:2.4.0"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath "org.hidetake:gradle-ssh-plugin:${sshPluginVersion}"
     }
 }
 
@@ -17,8 +17,8 @@ remotes {
 }
 
 dependencies {
-    compile 'com.pi4j:pi4j-core:1.0'
-    compile 'org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE'
+    compile "com.pi4j:pi4j-core:${pi4jVersion }"
+    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     compile project(':utils')
 }
 
