--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     }
 }
 
 apply plugin: 'spring-boot'
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-freemarker:1.3.6.RELEASE'
+    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+    compile "org.springframework.boot:spring-boot-starter-freemarker:${springBootVersion}"
     compile project(':utils')
 }
