--- a/client/build.gradle
+++ b/client/build.gradle
@@ -7,6 +7,6 @@ buildscript {
 apply plugin: 'spring-boot'
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
-    compile "org.springframework.boot:spring-boot-starter-freemarker:${springBootVersion}"
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-freemarker"
 }
