--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -18,7 +18,7 @@ remotes {
 
 dependencies {
     compile "com.pi4j:pi4j-core:${pi4jVersion}"
-    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+    compile "org.springframework.boot:spring-boot-starter-web"
 }
 
 task deploy << {
