--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-allprojects {
-    group = 'com.yauhenl'
-    version = '1.0'
-}
-
 subprojects {
     buildscript {
         ext {
@@ -25,6 +20,9 @@ subprojects {
         mavenCentral()
         maven {
             url "https://oss.sonatype.org/content/groups/public/"
+        }
+        maven {
+            url "https://maven.java.net/content/repositories/snapshots/"
         }
     }
 }
