--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -1,11 +1,9 @@
 buildscript {
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
         classpath "org.hidetake:gradle-ssh-plugin:${sshPluginVersion}"
     }
 }
 
-apply plugin: 'spring-boot'
 apply plugin: "org.hidetake.ssh"
 
 remotes {
@@ -18,13 +16,23 @@ remotes {
 
 dependencies {
     compile "com.pi4j:pi4j-core:${pi4jVersion}"
-    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.glassfish.jersey.containers:jersey-container-jdk-http:2.23.2"
+    compile "org.glassfish.jersey.ext:jersey-spring4:3.0-SNAPSHOT"
+    compile "javax.servlet:javax.servlet-api:3.0.1"
 }
 
 task deploy << {
     ssh.run {
         session(remotes.pi) {
-            put from: 'bot/build/libs/bot-1.0.jar', into: 'pibot.jar'
+            put from: 'build/libs/bot.jar', into: 'pibot.jar'
         }
     }
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.yauhenl.pibot.Application'
+    }
+    archiveName 'bot.jar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
