--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,10 @@
-rootProject.name = 'pibot'
+def configureGradleScriptKotlinOn(ProjectDescriptor project) {
+    project.buildFileName = 'build.gradle.kts'
+    project.children.each { configureGradleScriptKotlinOn(it) }
+}
+
 include 'client'
 include 'bot'
+
+configureGradleScriptKotlinOn rootProject
 
