Revert: gradle-script-kotlin

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,4 @@
-def configureGradleScriptKotlinOn(ProjectDescriptor project) {
-    project.buildFileName = 'build.gradle.kts'
-    project.children.each { configureGradleScriptKotlinOn(it) }
-}
-
+rootProject.name = 'pibot'
 include 'client'
 include 'bot'
-
-configureGradleScriptKotlinOn rootProject
 
