--- a/client/build.gradle
+++ b/client/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 }
 
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
