--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -1,14 +1,20 @@
 buildscript {
     dependencies {
-        classpath "org.hidetake:gradle-ssh-plugin:${sshPluginVersion}"
+        classpath "org.hidetake:gradle-ssh-plugin:$sshPluginVersion"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 apply plugin: "org.hidetake.ssh"
+apply plugin: 'org.springframework.boot'
+apply plugin: 'java'
+apply plugin: 'kotlin'
 
 dependencies {
-    compile "com.pi4j:pi4j-core:${pi4jVersion}"
-    compile "org.glassfish.jersey.containers:jersey-container-jdk-http:2.23.2"
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "com.pi4j:pi4j-core:$pi4jVersion"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 remotes {
@@ -27,12 +33,4 @@ task deploy {
             }
         }
     }
-}
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.yauhenl.pibot.Application'
-    }
-    archiveName 'bot.jar'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
