--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,12 +1,15 @@
 buildscript {
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 apply plugin: 'org.springframework.boot'
+apply plugin: 'kotlin'
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-freemarker"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
