--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ subprojects {
                 url "https://plugins.gradle.org/m2/"
             }
         }
+        dependencies {
+            classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        }
     }
 
     repositories {
