update lib versions

--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 subprojects {
     buildscript {
         ext {
-            springBootVersion = '1.4.2.RELEASE'
+            springBootVersion = '1.5.3.RELEASE'
             sshPluginVersion = '2.7.0'
             pi4jVersion = '1.2-SNAPSHOT'
-            kotlin_version = '1.0.5-2'
+            kotlin_version = '1.1.2'
         }
         repositories {
             mavenCentral()
-            maven {
-                url "https://plugins.gradle.org/m2/"
-            }
+            maven { url "https://plugins.gradle.org/m2/" }
         }
         dependencies {
             classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
@@ -20,8 +18,6 @@ subprojects {
 
     repositories {
         mavenCentral()
-        maven {
-            url "https://oss.sonatype.org/content/groups/public/"
-        }
+        maven { url "https://oss.sonatype.org/content/groups/public/" }
     }
 }
