--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -10,8 +10,8 @@ apply plugin: 'kotlin'
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile "com.pi4j:pi4j-core:$pi4jVersion"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 remotes {
