--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ subprojects {
             springBootVersion = '1.5.3.RELEASE'
             sshPluginVersion = '2.9.0'
             pi4jVersion = '1.2-SNAPSHOT'
-            kotlin_version = '1.1.2'
+            kotlin_version = '1.1.3-2'
         }
         repositories {
             mavenCentral()
